--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,25 @@
 # === Application Config ===
 spring.application.name=bugtrackpro-backend
-server.port=8181
+#server.port=8181
+server.port=${PORT:8181}
 
-# === MySQL Database Configuration ===
-spring.datasource.url=jdbc:mysql://localhost:3306/bugtrackpro_db
+# === Railway MySQL Configuration ===
+spring.datasource.url=jdbc:mysql://maglev.proxy.rlwy.net:57955/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=oLJmJRBULlzQpIhuXtuXTWiXoNIWWtpn
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # === JPA Configuration ===
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # === JWT Configuration ===
-# Must be a Base64-encoded string (>=256-bit, i.e. ~44 chars)
 app.jwt.secret=qK89A1nrrHxCz8nH1N2xkbON5zHo8Ij6SHxMPF7nqRA=
-
-
-app.jwt.expiration=86400000  # 1 day in milliseconds
+app.jwt.expiration=86400000  # 1 day
 
 # === Disable Flyway if not used ===
 spring.flyway.enabled=false
+
+# === File Upload Path ===
 upload.dir=uploads
