--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 # === Application Config ===
 spring.application.name=bugtrackpro-backend
-#server.port=8181
-server.port=${PORT:8181}
+server.port=${PORT:8181}  # Render will inject PORT automatically
 
 # === Railway MySQL Configuration ===
-spring.datasource.url=jdbc:mysql://maglev.proxy.rlwy.net:57955/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=oLJmJRBULlzQpIhuXtuXTWiXoNIWWtpn
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver  # ✅ modern driver
 
 # === JPA Configuration ===
 spring.jpa.hibernate.ddl-auto=update
@@ -15,11 +14,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # === JWT Configuration ===
-app.jwt.secret=qK89A1nrrHxCz8nH1N2xkbON5zHo8Ij6SHxMPF7nqRA=
-app.jwt.expiration=86400000  # 1 day
+app.jwt.secret=${JWT_SECRET}
+app.jwt.expiration=${JWT_EXPIRATION}
 
 # === Disable Flyway if not used ===
 spring.flyway.enabled=false
 
 # === File Upload Path ===
-upload.dir=uploads
+upload.dir=${UPLOAD_DIR:uploads}  # fallback to 'uploads' if not set
