Fix PORT format for Render deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 # === Application Config ===
 spring.application.name=bugtrackpro-backend
-server.port=${PORT:8181}  # Render will inject PORT automatically
+server.port=${PORT:8181} 
+ # Render will inject PORT automatically
 
 # === Railway MySQL Configuration ===
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver  # ✅ modern driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver  
 
 # === JPA Configuration ===
 spring.jpa.hibernate.ddl-auto=update
@@ -21,4 +22,4 @@ app.jwt.expiration=${JWT_EXPIRATION}
 spring.flyway.enabled=false
 
 # === File Upload Path ===
-upload.dir=${UPLOAD_DIR:uploads}  # fallback to 'uploads' if not set
+upload.dir=${UPLOAD_DIR:uploads} 
