--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,13 @@ server.port=${PORT:8181}
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver  
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 # === JPA Configuration ===
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # === JWT Configuration ===
 app.jwt.secret=${JWT_SECRET}
