--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
             <scope>runtime</scope>
         </dependency>-->
 		<dependency>
-			<groupId>mysql</groupId>
+			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.0.33</version>
 		</dependency>
